--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
   <footer class="footer">
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.bobmatyas.com">Bob Matyas</a>.
+     &copy; 2020 Subhralina Nayak
     </p>
   </footer>
   <script src="scripts.js"></script>
